# march-madness

./: .env.example  .gitignore  .worktree-symlinks  CLAUDE.md  Cargo.toml  README.md  mise.toml  package.json  pyproject.toml  tsconfig.base.json
.changeset/: add-poll-interval-flag.md  bracket-count-desktop.md  bracket-ui-improvements.md  cache-no-store-transport.md  changeset-workflow.md  claim-winnings-ui.md  clean-bracket-icons.md  config.json  deploy-v2-testnet.md  ff-desktop-columns.md  ff-desktop-grouped.md  ff-desktop-sort-top.md  ff-layout-and-sorting.md  ff-mirror-comparison.md  ff-sort-bracket-button.md  fix-advancing-color-bleed.md  fix-advancing-overlay.md  fix-bracket-viewer-replacements.md  fix-clippy-type-complexity.md  fix-dmm-build-alias.md  fix-feed-timezone-mappings.md  fix-final-score-correction.md  fix-forecaster-expected-scores.md  fix-game-win-probs-actual-teams.md  fix-group-entry-fee.md  fix-halftime-display.md  fix-leaderboard-forecast-crash.md  fix-live-resolver-halftime.md  fix-ncaa-api-format.md  fix-ncaa-feed-date-rollover.md  fix-ncaa-feed-supervisor.md  fix-ncaa-name-mappings.md  fix-partial-scoring-cascade.md  fix-prelock-simulation.md  fix-ts-bracket-encoding.md  fix-v2-test-payments.md  fix-validation-flash.md  fix-viewonly-cursor.md  fuzzy-masks-find.md  gorgeous-sheep-wonder.md  (+45 more)
.claude/skills/checklist/: SKILL.md
.github/workflows/: ci.yml  merge-changesets.yml
contracts/: .env.example  .gitignore  foundry.toml  mise.toml
contracts/script/: DeployAll.s.sol  DeployAllLocal.s.sol  DeployBracketGroups.s.sol  DeployMirror.s.sol  DeployV2.s.sol  MarchMadness.s.sol  MarchMadnessLocal.s.sol
contracts/src/: BracketGroups.sol  BracketGroupsV2.sol  BracketMirror.sol  ByteBracket.sol  IMarchMadness.sol  MarchMadness.sol  MarchMadnessV2.sol
contracts/test/: BracketGroups.t.sol  BracketMirror.t.sol  BracketVectors.t.sol  MarchMadnessV2.t.sol
contracts/test/jimpo/: ByteBracket.t.sol  MarchMadness.t.sol
contracts/test/slop/: AccessControl.t.sol  EdgeCases.t.sol  NoContest.t.sol  Payout.t.sol  ResultsDeadline.t.sol  Scoring.t.sol  Sentinel.t.sol
crates/: Cargo.toml
crates/bracket-sim/: Cargo.toml
crates/bracket-sim/src/: bracket.rs  bracket_config.rs  calibration.rs  calibration_mm.rs  constants.rs  game.rs  lib.rs  live_resolver.rs  metrics.rs  scoring.rs  team.rs  tournament.rs
crates/common/: Cargo.toml
crates/common/src/: types.rs
crates/forecaster/: Cargo.toml
crates/forecaster/src/: main.rs  simulate.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: contract.rs  indexer.rs  main.rs  provider.rs  redis_store.rs  rpc.rs
crates/indexer/src/commands/: backfill.rs  backfill_mirror.rs  check.rs  check_redis.rs  listen.rs  mod.rs  reveal.rs  seed.rs
crates/kalshi/: Cargo.toml  team_names.toml
crates/kalshi/src/: auth.rs  fair_value.rs  lib.rs  orderbook.rs  rest.rs  team_names.rs  types.rs  ws.rs
crates/mirror-importer/: Cargo.toml
crates/mirror-importer/src/: api.rs  cache.rs  encode.rs  main.rs  names.rs
crates/ncaa-api/: Cargo.toml
crates/ncaa-api/src/: bracket.rs  client.rs  lib.rs  schedule.rs  scoreboard.rs  types.rs
crates/ncaa-feed/: Cargo.toml
crates/ncaa-feed/src/: feed.rs  main.rs  mapper.rs  writer.rs
crates/populate/: Cargo.toml
crates/populate/src/: contract.rs  main.rs  migrate.rs  provider.rs
crates/seismic-march-madness/: Cargo.toml
crates/seismic-march-madness/src/: data.rs  lib.rs  migration.rs  redis_keys.rs  scoring.rs  simulate.rs  test_util.rs  tournament.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  routes.rs  state.rs
data/: abbreviations.toml  anvil-accounts.json  bracket_config.toml  deployments.json  mappings.toml  mens-2025.json  mens-2026.json  teams_2026.csv  tournament_2026.json
data/2025/: kenpom.csv
data/2025/men/: tournament.json
data/2026/: kenpom.csv
data/2026/mappings/: ncaa-names.json
data/2026/men/: kenpom.csv  status.json  tournament.json
data/test-vectors/: bracket-vectors.json
deploy/: README.md  nginx.conf  supervisor.conf
docs/: api.md  changeset.md  technical.md
docs/prompts/bracket-winner-ui/: 1775577574-claim-winnings-ui.txt
docs/prompts/cdai__add-bracket-sim/: 1773594298-port-bracket-sim.txt
docs/prompts/cdai__add-checklist-skill/: 1741952400-add-checklist-skill.txt
docs/prompts/cdai__add-groups/: 1742025600-add-bracket-groups-contract.txt  1742029200-split-into-mirror-and-groups.txt  1742032800-unified-deploy.txt  1742065200-pr-review-changes.txt  1742068800-year-in-constructor.txt  1742072400-full-interface.txt
docs/prompts/cdai__add-kalshi/: 1773594187-port-kalshi.txt
docs/prompts/cdai__add-kenpom-scripts/: 1773593885-port-kenpom-scripts.txt
docs/prompts/cdai__add-pipeline/: 1742054400-add-pipeline-scripts.txt
docs/prompts/cdai__add-results-deadline/: 1742137200-add-results-deadline.txt
docs/prompts/cdai__auto-join-on-create/: 1742140800-auto-join-creator.txt
docs/prompts/cdai__bracket-count-desktop/: 1742310000-add-bracket-count-header.txt
docs/prompts/cdai__bracket-counter/: 1773766651-bracket-counter.txt
docs/prompts/cdai__bracket-forecaster/: 1742062000-bracket-forecast-crate.txt  1742063000-how-calculate-pwin.txt  1742065000-forward-simulation.txt  1742067000-3rd-party-imports-lib.txt  1742068000-rename-common-crate.txt  1742070000-api-docs.txt  1742071000-add-lib-to-cargo.txt
docs/prompts/cdai__bracket-test-vectors/: 1742140800-bracket-test-vectors.txt
docs/prompts/cdai__changeset-push-token/: 1742311200-push-token.txt
docs/prompts/cdai__changeset-workflow/: 1742310600-changeset-workflow.txt
docs/prompts/cdai__check-redis-subcommand/: 1742243400-entry-counts.txt  1742243500-simplify.txt
docs/prompts/cdai__ci-workflows/: 1741945600-pr-requirement.txt  1741945700-pr-after-every-task.txt  1741946200-ci-mise-samlaf.txt  (+2 more)
scripts/: alias.sh  ci.sh  deploy-frontend.sh  deploy-testnet.sh  deploy-v2.sh  fit_kenpom_model.py  generate-abis.ts  mirror-yahoo.sh  redeploy-bracket-groups.sh  redeploy-mirror.sh  refresh-ratings.sh  refresh.sh  scrape_kenpom.py
(+289 files in other folders)
