[workspace]
resolver = "2"
members = ["common", "indexer", "server"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
march-madness-common = { path = "common" }
