[workspace]
resolver = "2"
members = ["common", "indexer", "server"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
alloy-primitives = "0.8"
hex = "0.4"
fs2 = "0.4"
march-madness-common = { path = "common" }
