[package]
name = "bracket-sim"
version.workspace = true
edition.workspace = true

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[dependencies]
rand = "0.9"
rand_distr = "0.5"
csv = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.7"
statrs = "0.18"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
