[package]
name = "bracket-sim"
version.workspace = true
edition.workspace = true

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[[bin]]
name = "score-dist"
path = "src/bin/score_dist.rs"

[dependencies]
kalshi = { path = "../kalshi" }
seismic-march-madness = { path = "../seismic-march-madness" }
chrono = "0.4"
rand = "0.9"
rand_distr = "0.5"
csv = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.7"
statrs = "0.18"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tempfile = "3"
