[package]
name = "march-madness-forecaster"
edition.workspace = true
version.workspace = true

[dependencies]
march-madness-common.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
clap = { version = "4", features = ["derive"] }
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
