[package]
name = "march-madness-forecaster"
edition.workspace = true
version.workspace = true

[dependencies]
seismic-march-madness.workspace = true
bracket-sim = { path = "../bracket-sim" }
serde_json.workspace = true
eyre.workspace = true
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
