[package]
name = "march-madness-indexer"
edition.workspace = true
version.workspace = true

[dependencies]
march-madness-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
eyre.workspace = true
clap.workspace = true
reqwest.workspace = true
alloy-primitives.workspace = true
hex.workspace = true
fs2.workspace = true
