[package]
name = "march-madness-indexer"
edition.workspace = true
version.workspace = true

[dependencies]
seismic-march-madness.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
eyre.workspace = true
clap.workspace = true
hex.workspace = true
fs2.workspace = true
url.workspace = true
reqwest.workspace = true

# Alloy
alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-network.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-consensus.workspace = true

# Seismic
seismic-alloy-provider.workspace = true
seismic-alloy-network.workspace = true
seismic-alloy-consensus.workspace = true
seismic-alloy-rpc-types.workspace = true
