[package]
name = "kalshi"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
toml = "0.8"
tracing = "0.1"
