[package]
name = "mirror-importer"
edition.workspace = true
version.workspace = true
description = "Import brackets from external platforms and mirror them on-chain via BracketMirror"

[[bin]]
name = "mirror-importer"
path = "src/main.rs"

[dependencies]
seismic-march-madness.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json", "blocking"] }
clap.workspace = true
chrono.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
dotenvy.workspace = true
