[package]
name = "ncaa-feed"
edition.workspace = true
version.workspace = true
description = "NCAA live score feed — polls NCAA API, writes tournament-status.json"

[[bin]]
name = "ncaa-feed"
path = "src/main.rs"

[[bin]]
name = "fetch-bracket"
path = "src/bin/fetch_bracket.rs"

[dependencies]
ncaa-api.workspace = true
seismic-march-madness.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
eyre.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dotenvy.workspace = true
redis.workspace = true
toml.workspace = true
