[package]
name = "march-madness-populate"
edition.workspace = true
version.workspace = true

[dependencies]
seismic-march-madness.workspace = true
tokio.workspace = true
eyre.workspace = true
clap.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
futures = "0.3"

# Alloy
alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-network.workspace = true
alloy-transport-http.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-signer-local.workspace = true
alloy-contract = "=1.1.0"

# Seismic
seismic-alloy-provider.workspace = true
seismic-alloy-network.workspace = true
seismic-alloy-rpc-types.workspace = true
