[package]
name = "seismic-march-madness"
edition.workspace = true
version.workspace = true
description = "March Madness on Seismic — types, scoring, and simulation library"

[dependencies]
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
csv = "1.2"
rand = "0.9"
clap = { version = "4", features = ["derive"], optional = true }

[[bin]]
name = "export-tournament"
path = "src/bin/export_tournament.rs"
required-features = ["cli"]

[features]
cli = ["clap"]
