[package]
name = "seismic-march-madness"
edition.workspace = true
version.workspace = true
description = "March Madness on Seismic — types, scoring, and simulation library"

[dependencies]
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
csv = "1.2"
rand = "0.9"
rayon = "1.7"
