[package]
name = "march-madness-server"
edition.workspace = true
version.workspace = true

[dependencies]
seismic-march-madness.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
eyre.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
redis.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy.workspace = true
